Tweaked testing env

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ perl:
   - "5.12"
   - "5.10"
 env:
-  - HARNESS_OPTIONS=j9
+  - "HARNESS_OPTIONS=j9 TEST_POD=1"
 before_install:
   - sudo apt-get install libmysqlclient-dev
+  - "cpanm -n Test::Pod Test::Pod::Coverage"
 before_script:
   - mysql -u root <data/backup__myapp_test.sql
